# termchess

./: .gitignore  Cargo.toml  debug
src/: ai.rs  board.rs  game.rs  main.rs  moves.rs  online.rs  piece.rs  server.rs  simulate.rs
