[package]
name = "termchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
color-format = { git = "https://github.com/LinusDikomey/color-format" }
vecm = { git = "https://github.com/LinusDikomey/vecm" }
binverse = "0.6.2"
binverse_derive = "0.6.2"
libc = "*"